Bug #14612. I'm checking this in for warren. r=mscott The pipe shouldn't block when you write more bytes into the pipe than the size of the pipe's buffer. Add an extra notify to the writer of the pipe after we read data out of it.